@@ -1,5 +1,11 @@
 2008-04-22  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/gconf-helpers.c
+		- (copy_one_setting_value_to_gconf): clear out values from gconf that
+			are default values
+
+2008-04-22  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (applet_get_best_activating_connection): renamed from
 			applet_get_best_active_connection(); only care about activating
